
- LP #554024 Changed the 'delete community' operation to use a new permission,
  'delete community' rather than overload the 'moderate' permission.

- LP #556673 Only display buttons to add calendar events if user has permission
  to create events in the calendar.

- LP #556036 Get static revision from subversion revision, if possible.

3.26 (2010-03-26)
-----------------

- LP #548352 Fixed bug which caused alerts to fail if a community had a comma
  in it's title.

- LP #548352 Fixed bug in error monitor where log messages containing unknown
  character encoding data could render the log unviewable.

3.25 (2010-03-25)
-----------------

- LP #546902: Removed the 500 character limit validator from the 'text'
  field on the community member and new user invite forms.

- Fixed a failing unittest for mailin dispatcher.  Did not affect production
  usage.

3.24 (2010-03-22)
-----------------

- LP #532879 Added a try/except block to catch ParseError exceptions
  in JQuery live search view to avoid contaminating error logs with
  ignored exceptions.

- The wiki links would not work for non-ascii characters because the
  title was saved as unicode and the text as html entities, causing
  the link matching code to return zero matches. Added function to
  unescape entities from links before comparison to fix this.

- LP #530799 (partial): Converted the following forms to use formish
  instead of enformed for form generation and validations: profile edit,
  admin profile edit, add user, add news item, edit news item, add
  intranet, edit intranet, edit intranets root, add page, edit page.

- LP #544201 Added check for 'create' permission on target for mailin.

3.23 (2010-03-16)
-----------------

- LP #538272: Fixed add / edit community forms to pass the page_title
  in to the TemplateAPI object instead of directly to the template.

- LP #533366 Added simple retry capability to run_daemon, primarily to
  avoid tripping the error monitor when conflict errors ocurr.
